
    * src/libnrtype/nr-type-w32.h: fixed unremoved underscores

	* src/select-context.cpp, src/selection.cpp, src/selection.h,
	  src/seltrans.cpp, src/tools-switch.cpp, src/dialogs/align.cpp:
	  remove improper twiddling of desktop message line from SPSelection;
	  some additional work is now required in SPSelectContext to update
	  the message properly in all cases.

2004-04-20  Kees Cook <kees@outflux.net>

	* src/file.cpp, src/desktop.cpp: moved sp_file_open unselection code into
	  sp_desktop_change_document.  Generalized Carl's fix for unref counting
	  since it applies in both cases.  (My bad!)

2004-04-20  MenTaLguY <mental@rydia.net>

    * src/text-context.cpp: merged Carl's fix for signal cleanup

    * src/selection.h: marked wrappers for old API as deprecated

2004-04-20  Carl Hetherington <inkscape@carlh.net>

	* src/extension/internal/ps.cpp, src/extension/internal/ps.h:
	Fixed some bugs in exporting images that seem to have been
	introduced when the code was copied from the gimp.  They caused
	problems when exporting bitmap images to PS.

	* src/file.cpp: fix bug whereby the first file loaded in a session
	would not have its modified status checked when closed.  Hence if
	you modified the first file you loaded and then closed it, you
	would not be asked to confirm the close.

	* src/preferences-skeleton.h: add \n to the end of each line to
	fix bug 938368.

2004-04-19  MenTaLguY <mental@rydia.net>

    * src/arc-context.cpp, src/desktop-handles.h, src/desktop.h,
	  src/draw-context.cpp, src/draw-context.h, src/forward.h,
	  src/inkscape-private.h, src/inkscape.cpp, src/node-context.cpp,
	  src/node-context.h, src/rect-context.cpp, src/selection-chemistry.cpp,
	  src/selection-chemistry.h, src/selection.cpp, src/selection.h,
	  src/seltrans.h, src/spiral-context.cpp, src/star-context.cpp,
	  src/star-context.h, src/text-context.cpp, src/dialogs/xml-tree.cpp,
	  src/widgets/sp-widget.h:

	  finished GObject removal from SPSelection
